<resources>
    <string name="app_name">KadeSubmTwo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_world">Hello Worlds</string>
    <string name="content_desc">Image Poster</string>
    <string name="overview">Overview</string>
    <string name="website">Website :</string>
    <string name="time">Time :</string>
    <string name="date">Date :</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Events</string>
    <string name="list_league">List League</string>
    <string name="next_event">Next Event</string>
    <string name="past_event">Past Event</string>
    <string name="goal_home">Goal Home :</string>
    <string name="red_card_home">Red Card ( Home )</string>
    <string name="yellow_card_home">Yellow Card ( Home ) :</string>
    <string name="score">Score :</string>
    <string name="goal_away">Goal Away :</string>
    <string name="red_card_away">Red Card ( Away )</string>
    <string name="yellow_card_away">Yellow Card ( Away )</string>
    <string-array name="name_league">
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
        <item>American Mayor League</item>
        <item>Protugeuese Premiera Liga</item>
        <item>Australian A League</item>
        <item>Scotish Premier League</item>
        <item>English League 1</item>
    </string-array>
</resources>